Fix heading alignment issue

--- a/src/firstYearGuide/assets/css/subjectsFYG.css
+++ b/src/firstYearGuide/assets/css/subjectsFYG.css
@@ -15,7 +15,10 @@
 }
 
 .subject-fyg__heading {
+  position: absolute;
   top: calc(1em + 40px);
+  left: 50%;
+  transform: translateX(-50%);
   z-index: 101;
 }
 
